--- a/scss/_noor.scss
+++ b/scss/_noor.scss
@@ -1,4 +1,3 @@
-$flagged: false !default;
 .search-header {
   position: fixed;
   top: 0;
@@ -7,7 +6,6 @@ $flagged: false !default;
   width: 100%;
   max-height: 100vh;
   overflow-y: auto;
-  background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url("/img/blur.jpg");
   background-position: 50%;
   background-size: cover;
   @include media-breakpoint-up(md) {
@@ -23,6 +21,7 @@ $flagged: false !default;
     text-align: center;
     background: rgba(0, 0, 0, .5);
     img {
+      display: block;
       width: auto;
       height: 22px;
     }
@@ -133,63 +132,6 @@ $flagged: false !default;
 
   @include media-breakpoint-down(sm) {
     padding-top: 102px;
-  }
-}
-.ad {
-  position: relative;
-
-  @if $flagged {
-    & {
-      padding-left: 2.5rem;
-      .flag {
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 1.5rem;
-        height: 100%;
-
-        &::before {
-          position: relative;
-          font-size: .75rem;
-          line-height: 1rem;
-          color: #fff;
-          transform: rotateZ(-90deg);
-        }
-      }
-
-      &.ams {
-        .flag {
-          background-color: rgba(114, 183, 37, .5);
-
-          &::before {
-            content: "Arbetsförmedlingen";
-          }
-        }
-      }
-
-      &.jobbsafari {
-        .flag {
-          background-color: #e7af7c;
-
-          &::before {
-            content: "Jobbsafari";
-          }
-        }
-      }
-
-      &.blocketjobb {
-        .flag {
-          background-color: #8b9fba;
-
-          &::before {
-            content: "Blocket\00a0jobb";
-          }
-        }
-      }
-    }
   }
 }
 .professions {
