--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -8,15 +8,17 @@
 // Deprecate
 @import "mixins/deprecate";
 
-// Utilities
+// Helpers
 @import "mixins/breakpoints";
-@import "mixins/hover";
 @import "mixins/image";
 @import "mixins/resize";
 @import "mixins/screen-reader";
 @import "mixins/reset-text";
 @import "mixins/text-emphasis";
 @import "mixins/text-truncate";
+
+// Utilities
+@import "mixins/utilities";
 
 // Components
 @import "mixins/alert";
@@ -40,5 +42,3 @@
 @import "mixins/clearfix";
 @import "mixins/grid-framework";
 @import "mixins/grid";
-
-@import "mixins/underline";
