--- a/scss/_noor.scss
+++ b/scss/_noor.scss
@@ -29,13 +29,14 @@
 
   .shrinker {
     /* stylelint-disable property-blacklist  */
-    transition: padding .25s;
+    transition: padding .5s;
     /* stylelint-enable */
   }
 
-  .counter {
+  .counter,
+  .title {
     /* stylelint-disable property-blacklist  */
-    transition: hight .25s, opacity .25s, padding .25s, line-height .25s, transform .25s;
+    transition: hight .5s, opacity .5s, padding .5s, line-height .5s, transform .5s;
     /* stylelint-enable */
   }
 }
@@ -82,9 +83,10 @@
 }
 .search-body {
   padding-top: 304px;
+  word-break: break-word;
   background-color: $jobs-body;
   /* stylelint-disable property-blacklist  */
-  transition: padding .25s;
+  transition: padding .5s;
   /* stylelint-enable */
 
   input,
@@ -95,8 +97,17 @@
   }
 
   @include media-breakpoint-up(md) {
+    &.home {
+      padding-top: 100vh;
+
+      .shrinker {
+        padding-top: 40vh !important;
+        padding-bottom: 40vh !important;
+      }
+    }
+
     &.shrunk {
-      padding-top: 180px;
+      padding-top: 280px;
       .search-header {
         .shrinker {
           /* stylelint-disable declaration-no-important  */
@@ -105,7 +116,8 @@
           /* stylelint-enable */
         }
 
-        .counter {
+        .counter,
+        .title {
           height: 0;
           padding-top: 0;
           padding-bottom: 0;
