Added hover for the sitemap buttons. Fixed custom-page missing extended classes.

--- a/scss/_custom-page.scss
+++ b/scss/_custom-page.scss
@@ -1,7 +1,10 @@
 @import "functions";
 @import "variables";
+@import "mixins";
+@import "utilities";
 
-@import "mixins/breakpoints";
+@import "utilities/sizing";
+@import "utilities/api";
 
 .custom-page {
   .text-center {
